[package]
name = "ewallet-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4.17"
serde = {version="^1", features=["derive"]}
strum = "0.24"
strum_macros = "0.24"
mongodb = "2.3.1"
futures = "0.3.25"